Add import statement for xmhw module

--- a/xmhw_example.ipynb
+++ b/xmhw_example.ipynb
@@ -14,6 +14,7 @@
     "from datetime import date\n",
     "from dask.diagnostics import ProgressBar\n",
     "import warnings"
+    "import xmhw"
    ]
   },
   {
