Update references from XMHW to xrMHW

--- a/xrMHW_use_example.ipynb
+++ b/xrMHW_use_example.ipynb
@@ -8,7 +8,7 @@
    "outputs": [],
    "source": [
     "\"\"\"\n",
-    "Simplified Execution Script for Multidimensional Marine Heatwave Detector (XMHW)\n",
+    "Simplified Execution Script for Multidimensional Marine Heatwave Detector (xrMHW)\n",
     "================================================================================\n",
     "Instructions:\n",
     "1. Modify the \"USER CONFIGURATION\" section with your data.\n",
@@ -32,7 +32,7 @@
    "source": [
     "# clone the repository\n",
     "!conda install git -y\n",
-    "!git clone https://github.com/Gabo2000s/xarray_MHW-xmhw-.git"
+    "!git clone https://github.com/Gabo2000s/xarray_MHW-xrMHW-.git"
    ]
   },
   {
@@ -42,11 +42,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "repo_folder = r\"D:/Articulos/MHW/MHW_Code/xarray_MHW-xmhw-\" ## chose the folder where the repository is cloned\n",
+    "repo_folder = r\"D:/Articulos/MHW/MHW_Code/xarray_MHW-xrMHW-\" ## chose the folder where the repository is cloned\n",
     "if repo_folder not in sys.path:\n",
     "    sys.path.append(os.path.abspath(repo_folder))\n",
     "\t\t\t\t\n",
-    "import xmhw"
+    "import xrMHW"
    ]
   },
   {
@@ -707,7 +707,7 @@
      "text": [
       "\n",
       "============================================================\n",
-      " STARTING MARINE HEATWAVE DETECTOR (XMHW)\n",
+      " STARTING MARINE HEATWAVE DETECTOR (xrMHW)\n",
       "============================================================\n",
       "... Starting engine with 10 cores.\n",
       "\n",
@@ -821,7 +821,7 @@
    "source": [
     "if __name__ == \"__main__\":\n",
     "    print(\"\\n\" + \"=\"*60)\n",
-    "    print(\" STARTING MARINE HEATWAVE DETECTOR (XMHW)\")\n",
+    "    print(\" STARTING MARINE HEATWAVE DETECTOR (xrMHW)\")\n",
     "    print(\"=\"*60)\n",
     "\n",
     "    # 1. Start Dask Client (Parallelism)\n",
@@ -844,12 +844,12 @@
     "        # This allows Dask to handle files larger than RAM\n",
     "        ds = xr.open_dataset(INPUT_FILE, chunks=CHUNK_CONFIG)\n",
     "\n",
-    "        # 3. Run Algorithm (xmhw)\n",
+    "        # 3. Run Algorithm (xrMHW)\n",
     "        # ----------------------------------------------------------------------\n",
     "        print(f\"... Detecting events (Ref: {CLIM_START}-{CLIM_END})...\")\n",
     "        print(\"    This may take a while depending on file size.\")\n",
     "        \n",
-    "        ds_mhw = xmhw.xmhw_func(\n",
+    "        ds_mhw = xrMHW.xrMHW_func(\n",
     "            ds, \n",
     "            temp_var_name=VAR_NAME, \n",
     "            clim_period=(CLIM_START, CLIM_END),\n",
