Update chunk configuration to use 'latitude' and 'longitude'

--- a/xrMHW_use_example.ipynb
+++ b/xrMHW_use_example.ipynb
@@ -684,7 +684,7 @@
     "# RULE: 'time' MUST be -1 (load all time steps).\n",
     "# Adjust 'lat'/'lon' (or 'latitude'/'longitude') based on your specific file dimension names.\n",
     "# Smaller numbers = less RAM usage per core.\n",
-    "CHUNK_CONFIG    = {'time': -1, 'lat': 50, 'lon': 50}\n"
+    "CHUNK_CONFIG    = {'time': -1, 'latitude': 50, 'longitude': 50}\n"
    ]
   },
   {
